updated links for new file structure

--- a/basic-concepts/basics-10.html
+++ b/basic-concepts/basics-10.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Introduction</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,39 +32,27 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h2>TVM Equation</h2>
-                        <p>One of the central concepts of finance is that <i>a dollar today is worth more than a dollar in the future</i>. For example, if you make a purchase with a credit card, interest is added to the bill to compensate the credit card company for lending you money. Conversely, if you deposit money in a savings account, the bank pays you interest to compensate you for lending them money.</p>
-                        <p>Time Value of Money (TVM) is the equation we use to convert between today's money and money in the future. Transactions operate on this principal every day.</p>
-                        <!-- <p>Individuals use the TVM equation to plan for retirement savings or to compare the cost of a prospective mortgage or auto loan. Businesses use the equation to compare investments alternatives, to assist decision-makers by converting project opportunities into dollars, or to borrow money from lenders.</p> -->
-
-                        <div class="text-center bottom-space"><img src="../images/concept.png" alt="time value money" class="img-fluid"></div>
-                        <p>For example:</p>
-                        <p class="indent">A business usually collects customer accounts at the end of the month, but one customer requests an extension. If the business foregoes the payment for a while, the business should be compensated for the delay. What factors would be considered in determining how much the customer should pay at a later date?</p>
-                        <p>Most lenders would want to know:
-                            <ul>
-                                <li>How much is being borrowed?</li>
-                                <li>How long will it take the customer to repay the loan?</li>
-                                <li>What is the risk that the customer will not be able to pay the account at a later date?</li>
-                                <li>What else could your company do with the money if the customer paid now?</li>
-                                <li>If the loan is long enough, will inflation further erode the value of tomorrow's dollar?</li>
-                            </ul>
-                        </p>
+                        <p>In the problem we just solved, the number in parentheses is called the Future Value Factor. In the ‘good old days’ before calculators, people used tables of pre-calculated Future Value Factors to solve the TVM equation.</p>
+                        <p>First, find the intersection of the number of periods (years) on the left and the interest rate at the top to find the Future Value Factor. Then multiply PV times the Future Value Factor to calculate FV.</p>
+                        <div class="bottom-space">
+                            <img src="../images/fv_factor_table_example_10_years.png" class="border img-fluid">
+                        </div>
+                        <div><img class="math" src="../images/future-value-factor.svg"></div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-2.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-4.html">Continue</a>
+                    <a type="button" class="btn" href="basics-9.html">Back</a>
+                    <a type="button" class="btn" href="basics-11.html">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number"></div>
+                    <div class="page-number">13</div>
                 </div>
             </div>
         </div>
-
 
 
 
@@ -79,7 +67,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
