--- a/basic-concepts/basics-11.html
+++ b/basic-concepts/basics-11.html
@@ -15,12 +15,11 @@
 <body>
     <div class="container-fluid">
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,16 +31,21 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p class="answer">The answer is $100.</p>
-                        <p> If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
+                        <p>So far we have calculated FV with the TVM equation and the Future Value Factor.</p>
+                        <p>A third way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it.</p>
+                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
+                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
+                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
+                        <p class="text-center">
+                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-12.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-14.html">Continue</a>
+                    <a type="button" class="btn" href="basics-10.html">Back</a>
+                    <a type="button" class="btn" href="basics-12.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -64,7 +68,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
