--- a/basic-concepts/basics-14.html
+++ b/basic-concepts/basics-14.html
@@ -16,12 +16,12 @@
     <div class="container-fluid">
 
 
-        <!---------------- Title/Cover slide  *************** -->
-        <div id="" class="slide background-image">
+
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h1 class="primary-title">Time Value of Money</h1>
-                    <h2 class="secondary-title">Part 1: The Basics</h2>
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -31,12 +31,27 @@
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
-                <div class="col-sm-1 offset-sm-1">
-                    <div class="page-number hide">1</div>
+                <div class="col-12">
+                    <div class="content">
+                        <p>In the problem we just solved, the number in parentheses is called the Present Value Factor. When there are no lump sums or payments, the Present Value Factor is just the reciprocal of the Future Value Factor. </p>
+                        <p>Multiply the Future Value (FV) times the Present Value Factor to calculate Present Value (PV)</span class>.</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <div class="bottom-space"><img src="./images/pv_factors_table.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/tvm_basic_pv_factor_example.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/pv_factor_numbers.png" class="img-fluid " alt="">
+                        </div>
+                    </div>
                 </div>
-                <div class="offset-5 col-4 offset-md-6">
-                    <a type="button" class="hide btn"></a>
-                    <a type="button" class="btn start" href="tvm1-2.html">Start!</a>
+            </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <a type="button" class="btn" href="basics-13.html">Back</a>
+                    <a type="button" class="btn" href="basics-15.html">Continue</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
@@ -53,7 +68,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
