--- a/basic-concepts/basics-16.html
+++ b/basic-concepts/basics-16.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Introduction - TVM Variables</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,31 +32,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>What factors would you consider in determining how much Future Value (FV) the customer should pay at a later date? Let's attach some variable names to these factors to understand them better.</p>
-
-                        <div id="PresentValue">
-                            <h4>Present Value (PV)</h4>
-                            <p>How much is being borrowed? Present Value (PV) is the value in today's terms. This is sometimes called the principal or principal investment.</p>
-                        </div>
-                        <div id="FutureValue">
-                            <h4>Future Value (FV)</h4>
-                            <p>How much will you have in the future? Future Value (FV) is the value you will have in the future given a certain interest rate and/or time period.</p>
-                        </div>
-                        <div id="time">
-                            <h4>Time (n)</h4>
-                            <p>How long before the customer pays? Time (n) is the measure of time in years.</p>
-                        </div>
-                        <div id="interest">
-                            <h4>Interest (i) or Rate of Return</h4>
-                            <p>What is the risk that the customer will not be able to pay the account at a later date? What else could your company do with the money if the customer paid now? If the loan is long enough, will inflation further erode the value of tomorrow's dollar? Interest (i) is the rate of return, compensating for risk and opportunity cost. In formulas, you may see this indicated by r, i, or k.</p>
-                        </div>
+                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
+                        <p class="answer">The answer is 11.612%.</p>
+                        <p>If you answered correctly, click Continue. If you answered incorrectly, click the Help button to calculate the answer.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-3.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-5.html">Continue</a>
+                    <a type="button" class="btn" href="basics-15.html">Back</a>
+                    <a type="button" class="btn" href="basics-17.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -65,7 +50,6 @@
                 </div>
             </div>
         </div>
-
 
 
 
@@ -80,7 +64,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
