--- a/basic-concepts/basics-2.html
+++ b/basic-concepts/basics-2.html
@@ -15,12 +15,11 @@
 <body>
     <div class="container-fluid">
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h2 class="primary-title">Time Value of Money: The Basics</h2>
+                    <h3 class="secondary-title">Introduction</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,37 +31,43 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principals you need to follow along with the derivation of the equation.</p>
-                        <p>If we combine our previous equations into one equation it looks like this:</p>
-                        <div><img class="math" src="../images/derive1.svg" alt="100(1+.10)(1+.10)=121"></div>
-                        <p>We can simplify the equation to this:
-                            <div>$100(1+.10)^2=121$</div>
-                        </p>
-
-                        <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
-                        <div>
-                            <h3>$FV=PV(1+i)^n$</h3>
+                        <!-- <h2>The Time Value of Money</h2>
+                    <hr> -->
+                        <div id="learningObj" class="bottom-space">
+                            <h3>Learning Objectives</h3>
+                            <ul>
+                                <li>Identify the TVM variables within a given word problem</li>
+                                <li>Understand the relationship between variables in the TVM equation</li>
+                                <li>Memorize and recall the general form of the TVM equation</li>
+                                <li>Perform mathematical operations to solve for the unknown variable in the TVM equation, assuming annual interest</li>
+                            </ul>
                         </div>
-
-
-
+                        <div id="requirements" class="bottom-space">
+                            <h3>Requirements</h3>
+                            <p>To complete this tutorial, you will need:
+                                <ul>
+                                    <li>Basic algebra skills, including Order of Operations (PEMDAS) and FOIL. <a target="_blank" href="./help/math-basics.html">Click here to review these math principles.</a></li>
+                                    <li>Paper and pencil or pen</li>
+                                    <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
+                                </ul>
+                            </p>
+                            <p>Once you have everything you need, let’s get started!</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- to math refresher -->
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-6.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-8.html">Continue</a>
+                    <a type="button" class="btn" href="basics-1.html">Back</a>
+                    <a type="button" class="btn" href="basics-3.html">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">9</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
@@ -75,7 +80,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
