--- a/basic-concepts/basics-3.html
+++ b/basic-concepts/basics-3.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h3 class="secondary-title">Introduction</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,16 +32,30 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Answer this question:</p>
-                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                        <p>When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
+                        <h2>TVM Equation</h2>
+                        <p>One of the central concepts of finance is that <i>a dollar today is worth more than a dollar in the future</i>. For example, if you make a purchase with a credit card, interest is added to the bill to compensate the credit card company for lending you money. Conversely, if you deposit money in a savings account, the bank pays you interest to compensate you for lending them money.</p>
+                        <p>Time Value of Money (TVM) is the equation we use to convert between today's money and money in the future. Transactions operate on this principal every day.</p>
+                        <!-- <p>Individuals use the TVM equation to plan for retirement savings or to compare the cost of a prospective mortgage or auto loan. Businesses use the equation to compare investments alternatives, to assist decision-makers by converting project opportunities into dollars, or to borrow money from lenders.</p> -->
+
+                        <div class="text-center bottom-space"><img src="../images/concept.png" alt="time value money" class="img-fluid"></div>
+                        <p>For example:</p>
+                        <p class="indent">A business usually collects customer accounts at the end of the month, but one customer requests an extension. If the business foregoes the payment for a while, the business should be compensated for the delay. What factors would be considered in determining how much the customer should pay at a later date?</p>
+                        <p>Most lenders would want to know:
+                            <ul>
+                                <li>How much is being borrowed?</li>
+                                <li>How long will it take the customer to repay the loan?</li>
+                                <li>What is the risk that the customer will not be able to pay the account at a later date?</li>
+                                <li>What else could your company do with the money if the customer paid now?</li>
+                                <li>If the loan is long enough, will inflation further erode the value of tomorrow's dollar?</li>
+                            </ul>
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-14.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-16.html">Continue</a>
+                    <a type="button" class="btn" href="basics-2.html">Back</a>
+                    <a type="button" class="btn" href="basics-4.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -50,6 +64,7 @@
                 </div>
             </div>
         </div>
+
 
 
 
@@ -64,7 +79,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
