--- a/basic-concepts/basics-5.html
+++ b/basic-concepts/basics-5.html
@@ -16,12 +16,11 @@
     <div class="container-fluid">
 
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Learning the TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -33,19 +32,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Many textbooks will present you with four different TVM equations; one solving for each variable: FV, PV, i, and n. As a result you have to memorize four equations instead of one. There's an easier route!</p>
-                        <p>If you know the general TVM equation and have some basic math skills, you can solve for any of the four variables. We've already solved for Future Value (FV). Now we'll try 3 more example problems, solving for the other 3 variables. <span class="alert">For all these questions, solve without using the TVM buttons on your financial calculator.</span></p>
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p>If you need assistance with this question, click Help.</p>
+                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. <b>If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</b></p>
+                        <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
+                        <p class="answer">The answer is $110.</p>
+                        <p><a href="help/help1-1.html" target="_blank">See the steps for solving this problem here.</a></p>
 
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <!-- needs a help button  -->
-                    <a type="button" class="btn" href="tvm1-11.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-13.html">Continue</a>
+                    <a type="button" class="btn" href="basics-4.html">Back</a>
+                    <a type="button" class="btn" href="basics-6.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -68,7 +66,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
