--- a/not-on-server/originals/tvm1-11.html
+++ b/not-on-server/originals/tvm1-11.html
@@ -59,8 +59,8 @@
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-10.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-12.html">Continue</a>
+                    <a type="button" class="btn" href="basics-10.html">Back</a>
+                    <a type="button" class="btn" href="basics-12.html">Continue</a>
                 </div>
             </div>
             <div class="row">
