--- a/basic-concepts/basics-1.html
+++ b/basic-concepts/basics-1.html
@@ -16,12 +16,12 @@
     <div class="container-fluid">
 
 
-
-        <div id="" class="slide">
+        <!---------------- Title/Cover slide  *************** -->
+        <div id="" class="slide background-image">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h1 class="primary-title">Time Value of Money</h1>
+                    <h2 class="secondary-title">Part 1: The Basics</h2>
                 </div>
             </div>
             <nav class="row">
@@ -31,46 +31,15 @@
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
-                <div class="col-12">
-                    <div class="content">
-                        <h4>Exercise 1: Solution</h4>
-                        <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
-                        <p>Let's work through the problem.</p>
-                        <ul>
-                            <li>First, identify the variables:</li>
-                            <div><img class="math" src="../images/variables.svg">
-                            </div>
-                            <li>Once you've identified the variables, plug the numbers into the equation: </li>
-                            <div><img class="math" src="../images/plug-in-numbers.svg">
-                            </div>
-                            <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
-                            <div><img class="math" src="../images/add-numbers.svg">
-                            </div>
-
-                            <li>Next, apply the exponent. Be careful about rounding.</li>
-                            <div><img class="math" src="../images/apply-exponent.svg"></div>
-
-
-                            <li>Finally, do the multiplication.</li>
-                            <div><img class="math" src="../images/fv-answer.svg"></div>
-                            </li>
-                        </ul>
-                    </div>
+                <div class="col-sm-1 offset-sm-1">
+                    <div class="page-number hide">1</div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-8.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-10.html">Continue</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1">
-                    <div class="page-number">11</div>
+                <div class="offset-5 col-4 offset-md-6">
+                    <a type="button" class="hide btn"></a>
+                    <a type="button" class="btn start" href="basics-2.html">Start!</a>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
@@ -84,7 +53,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
