--- a/basic-concepts/basics-13.html
+++ b/basic-concepts/basics-13.html
@@ -15,11 +15,12 @@
 <body>
     <div class="container-fluid">
 
+
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">Time Value of Money: The Basics</h2>
-                    <h3 class="secondary-title">Introduction</h3>
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -31,35 +32,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- <h2>The Time Value of Money</h2>
-                    <hr> -->
-                        <div id="learningObj" class="bottom-space">
-                            <h3>Learning Objectives</h3>
-                            <ul>
-                                <li>Identify the TVM variables within a given word problem</li>
-                                <li>Understand the relationship between variables in the TVM equation</li>
-                                <li>Memorize and recall the general form of the TVM equation</li>
-                                <li>Perform mathematical operations to solve for the unknown variable in the TVM equation, assuming annual interest</li>
-                            </ul>
-                        </div>
-                        <div id="requirements" class="bottom-space">
-                            <h3>Requirements</h3>
-                            <p>To complete this tutorial, you will need:
-                                <ul>
-                                    <li>Basic algebra skills, including Order of Operations (PEMDAS) and FOIL. <a target="_blank" href="./help/math-basics.html">Click here to review these math principles.</a></li>
-                                    <li>Paper and pencil or pen</li>
-                                    <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
-                                </ul>
-                            </p>
-                            <p>Once you have everything you need, let’s get started!</p>
-                        </div>
+                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
+                        <p class="answer">The answer is $100.</p>
+                        <p> If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-1.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-3.html">Continue</a>
+                    <a type="button" class="btn" href="basics-12.html">Back</a>
+                    <a type="button" class="btn" href="basics-14.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -68,6 +50,8 @@
                 </div>
             </div>
         </div>
+
+
 
     </div> <!--  end of container -->
 
@@ -80,7 +64,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
