--- a/basic-concepts/basics-15.html
+++ b/basic-concepts/basics-15.html
@@ -16,52 +16,32 @@
     <div class="container-fluid">
 
 
-
-        <div id="" class="slide exercise-slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
                 <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
                 <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Example Exercise</h4>
-                        <p class="question">What would the $100 investment be worth in 10 years at 10% interest?</p>
-                        <p>Instructions: Identify the variables in the question and input them into the blanks provided.</p>
-
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-
-                                    <label>PV </label>
-                                    <input id="PV" type="number" placeholder="0"><br>
-
-                                    <label style="padding-left:15px;">i </label>
-                                    <input id="i" type="number" placeholder="0"><br>
-
-                                    <label style="padding-left: 10px;">n </label>
-                                    <input id="n" type="number" step="1" placeholder="0"><br>
-
-                                    <button id="ex1" type="button" class="btn calculate-btn">Calculate</button>
-                                </form>
-                            </div>
-                            <div class="answer" id="answer"></div>
-                        </div>
+                        <p>Answer this question:</p>
+                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
+                        <p>When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-7.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-9.html">Continue</a>
+                    <a type="button" class="btn" href="basics-14.html">Back</a>
+                    <a type="button" class="btn" href="basics-16.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -71,6 +51,8 @@
             </div>
         </div>
 
+
+
     </div> <!--  end of container -->
 
 
@@ -79,8 +61,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="./tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
