--- a/basic-concepts/basics-17.html
+++ b/basic-concepts/basics-17.html
@@ -15,11 +15,12 @@
 <body>
     <div class="container-fluid">
 
-        <div id="" class="slide">
+
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -31,21 +32,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>So far we have calculated FV with the TVM equation and the Future Value Factor.</p>
-                        <p>A third way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it.</p>
-                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
-                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
-                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
-                        <p class="text-center">
-                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
-                        </p>
+                        <p>Answer this question:</p>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+
+                        <p>Follow the pattern we have used in the previous sample problems. If you don’t know how to calculate the answer, click Help.</p>
+
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-10.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-12.html">Continue</a>
+                    <a type="button" class="btn" href="basics-16.html">Back</a>
+                    <a type="button" class="btn" href="basics-18.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -68,7 +66,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
