--- a/basic-concepts/basics-18.html
+++ b/basic-concepts/basics-18.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Learning the TVM Equation</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,18 +32,19 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example. <b>If you aren't sure how to calculate the answer, click the Help link in the navigation menu to learn how.</b></p>
-                        <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
-                        <p class="answer">The answer is $110.</p>
-                        <p><a href="help/help1-1.html" target="_blank">See the steps for solving this problem here.</a></p>
-
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+                        <p class="answer">The answer is 4.7 years.</p>
+                        <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
+                        <hr>
+                        <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
+                        <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-4.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-6.html">Continue</a>
+                    <a type="button" class="btn" href="basics-17.html">Back</a>
+                    <a type="button" class="btn" href="./exercises/exerciseIntro-1.html">To Exercises</a>
                 </div>
             </div>
             <div class="row">
@@ -66,7 +67,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
