--- a/basic-concepts/basics-6.html
+++ b/basic-concepts/basics-6.html
@@ -52,8 +52,8 @@
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-5.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-7.html">Continue</a>
+                    <a type="button" class="btn" href="basics-5.html">Back</a>
+                    <a type="button" class="btn" href="basics-7.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -75,7 +75,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
