--- a/basic-concepts/basics-7.html
+++ b/basic-concepts/basics-7.html
@@ -20,7 +20,7 @@
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,28 +32,36 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
-                        <p class="answer">The answer is 4.7 years.</p>
-                        <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
-                        <hr>
-                        <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
-                        <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
+                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principals you need to follow along with the derivation of the equation.</p>
+                        <p>If we combine our previous equations into one equation it looks like this:</p>
+                        <div><img class="math" src="../images/derive1.svg" alt="100(1+.10)(1+.10)=121"></div>
+                        <p>We can simplify the equation to this:
+                            <div>$100(1+.10)^2=121$</div>
+                        </p>
+
+                        <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
+                        <div>
+                            <h3>$FV=PV(1+i)^n$</h3>
+                        </div>
+
+
+
                     </div>
                 </div>
             </div>
+            <!-- to math refresher -->
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-17.html">Back</a>
-                    <a type="button" class="btn" href="./exercises/exerciseIntro-1.html">To Exercises</a>
+                    <a type="button" class="btn" href="basics-6.html">Back</a>
+                    <a type="button" class="btn" href="basics-8.html">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number"></div>
+                    <div class="page-number">9</div>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
@@ -67,7 +75,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
