--- a/basic-concepts/exercises/exerciseIntro-1.html
+++ b/basic-concepts/exercises/exerciseIntro-1.html
@@ -62,7 +62,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="tvm1-script.js"></script>
+    <script src="basics-script.js"></script>
 </body>
 
 </html>
