--- a/basic-concepts/help/help-index.html
+++ b/basic-concepts/help/help-index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- <div class="offset-5 col-4 offset-md-6">
                         <button type="button" class="hide btn"></button>
-                        <a type="button" class="btn" href="tvm1-2.html">Start!</a></button>
+                        <a type="button" class="btn" href="basics-2.html">Start!</a></button>
                     </div> -->
             </div>
         </div>
