--- a/not-on-server/originals/tvm1-7.html
+++ b/not-on-server/originals/tvm1-7.html
@@ -50,8 +50,8 @@
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="tvm1-6.html">Back</a>
-                    <a type="button" class="btn" href="tvm1-8.html">Continue</a>
+                    <a type="button" class="btn" href="basics-6.html">Back</a>
+                    <a type="button" class="btn" href="basics-8.html">Continue</a>
                 </div>
             </div>
             <div class="row">
